2001-05-19  Jody Goldberg <jgoldberg@home.com>

	* src/plugin.c (plugin_db_extend_saved_active_plugin_id_list) : Merge
	  into plugin_db_init.
	(plugin_db_init) : Find the unknown plugins not the known plugins.
	  Remove the list of plugins that default to on.
	  Fix the use of gnome_config.

2001-05-19  Jody Goldberg <jgoldberg@home.com>

	* gnumeric.spec.in : update GAL req.
	* configure.in : ditto.
	* README : update

	* src/GNOME_Gnumeric.xml : Fix the accelerators to use xkeysym names
	  rather than the physical key for slash and space.

	* src/plugin.c (plugin_db_init) : Enable new plugins by default.

2001-05-17  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-style.c (cell_tile_apply_pos) : Add more sanity checking.

2001-05-16  Jody Goldberg <jgoldberg@home.com>

	* src/item-bar.c (is_pointer_on_division) : Use
	  wbcg_rangesel_possible.
	* src/item-grid.c (item_grid_button_1) :  ditto.
	* src/gnumeric-sheet.c (gnumeric_sheet_key_mode_sheet) : ditto.
	* src/sheet-control-gui.c (scg_select_all) : ditto.
	(scg_colrow_select) : ditto.
	(scg_construct) : ensure we start with focus.
	(scg_rangesel_possible) : move from here.

	* src/workbook-control-gui.c (wbcg_rangesel_possible) : to here.
	(cb_notebook_switch_page) : expand the logic slightly to correct gurus.

	* src/workbook-edit.c (wbcg_edit_finish) : always check for rangesel.

	* src/parse-util.c (gnumeric_char_start_expr_p) : improve handling of
	  NULL.

2001-05-16  Jody Goldberg <jgoldberg@home.com>

	* src/workbook-edit.c (wbcg_edit_finish) : stop the current rangesel,
	  not rangesel on the current display sheet.

	* src/workbook-control-gui.c (cb_notebook_switch_page) : simplify and
	  use the new wbcg::rangesel to make things easier.
	(workbook_control_gui_init) : init the new flag.

	* src/sheet-control-gui.c (scg_rangesel_start) : store the scg doing
	  the rangesel in the wbcg.
	(scg_rangesel_stop) : clear it here.

2001-05-15  Jody Goldberg <jgoldberg@home.com>
